// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modifier Snapshots autocomplete 1`] = `
<div>
  <div
    background-color="white"
    class="v-input mt-0 pt-0 v-text-field v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
    height="48"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot white"
        style="height: 48px;"
      >
        <div
          class="v-select__slot"
        >
          <input
            aria-label=""
            autocomplete="off"
            placeholder="All events"
            role="combobox"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--link material-icons theme--light"
              />
            </div>
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        >
          <div
            class="v-menu__content theme--light v-autocomplete__content"
            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
          >
            <div
              class="v-select-list v-card theme--light"
            >
              <div
                class="v-list theme--light"
                role="list"
              >
                <div
                  role="listitem"
                >
                  <div
                    class="v-list__tile theme--light"
                  >
                    <div
                      class="v-list__tile__content"
                    >
                      <div
                        class="v-list__tile__title"
                      >
                        No data available
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modifier Snapshots date 1`] = `
<div>
  <div
    class="date-time-picker"
    id="DateTimePicker"
  >
    <div
      class="field flex align-center lg"
      data-v-a0144ed0=""
    >
      <input
        class="field-input"
        data-v-a0144ed0=""
        id="DateTimePicker"
        placeholder="Min Date"
        readonly="readonly"
        type="text"
      />
      <label
        class="field-label"
        data-v-a0144ed0=""
        for="DateTimePicker"
      >
        
    Min Date
  
      </label>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modifier Snapshots select 1`] = `
<div>
  <div
    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-input--hide-details theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <input
              aria-readonly="false"
              autocomplete="on"
              placeholder="All payment types"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        >
          <div
            class="v-menu__content theme--light "
            style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
          >
            <div
              class="v-select-list v-card theme--light"
            >
              <div
                class="v-list theme--light"
                role="list"
              >
                <div
                  role="listitem"
                >
                  <div
                    class="v-list__tile theme--light"
                  >
                    <div
                      class="v-list__tile__content"
                    >
                      <div
                        class="v-list__tile__title"
                      >
                        No data available
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modifier Snapshots text 1`] = `
<div>
  <div
    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-input--hide-details theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            placeholder="Min price"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
